fixed alignment of nametag box

--- a/style.css
+++ b/style.css
@@ -13,6 +13,8 @@ body, html {
 body {
     font-size: 16px;
     background-color:darksalmon;
+    display:flex;
+    justify-content: center;
 }
 
 .my-grid {
